[package]
name = "csrs"
version = "0.1.0"
authors = ["Nokkasiili <46995454+Nokkasiili@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bitflags = "1.0"

byteorder = "1"
scroll = "0.10.1"

goblin = "0.2.1"

